--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </h1>
             <p class="apresentacao__conteudo__texto"> 
                 Olá! Sou Hellyson, estudante de desenvolvimento 
-                Front-end com Javascript, HTML e CSS. 
+                Front-end com Javascript, HTML e CSS pela Alura. 
                 Minha meta é ajudar empresas com meus conhecimentos adquiridos e 
                 poder evoluir profissionalmente. Vamos conversar?</p>
                 <div class="apresentacao__links">
